kubernetes/grpc-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
spec:
  selector:
    name: grpc-client
  ports:
    - port: 8080
      targetPort: 3000
