kubernetes/grpc-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
spec:
  selector:
    name: grpc-server
  ports:
    - port: 50051
      targetPort: 50051
